<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="id.co.imastudio.bakingapp3.DetailRecipeDetailFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/textAppearanceMedium"
        android:id="@+id/detailrecipe_detail"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:foregroundTint="@color/colorPrimary" />
</LinearLayout>
